<resources>
    <string name="app_name">LetsGo</string>
    <string name="letsGoS">LET\'S GO!</string>
    <string name="AppS">A P P</string>
    <string name="sign">Sign in</string>
    <string name="login">Log in</string>
    <string name="Iam">I am...</string>
    <string name="passenger">passenger</string>
    <string name="driver">driver</string>
    <string name="username">Username</string>
    <string name="star">*</string>
    <string name="password">Password</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="birthDate">Birth date</string>
    <string name="profession">Profession</string>
    <string name="hint_pick_up_date">dd/mm/yyyy</string>
    <string name="nextBtn">Next</string>
    <string name="Hobbies">Hobbies</string>
    <string name="music">Music in the car</string>
    <string name="CarType">Car type and color</string>
    <string name="SocialLink">Social link</string>
    <string name="Relationship">Reletionship</string>
    <string name="selectPhoto">Select Photo</string>
    <string name="hi">how are you?</string>
    <string name="choise">Select your choice:</string>
    <string name="newRide">Open new ride</string>
    <string name="searchRide">Search for a ride</string>
    <string name="newRide1">New ride</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="date">Date:</string>
    <string name="departureTime">Departure time:</string>
    <string name="addNewRide">+ add new ride</string>
    <string name="info">Info</string>
    <string name="select">Select</string>
    <string name="back">Back</string>
</resources>