<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="281dp"
        android:layout_height="66dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/letsGoS"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/AppS"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInBtn"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/black"
        android:fallbackLineSpacing="false"
        android:fontFamily="@font/days_one"
        android:hapticFeedbackEnabled="false"
        android:text="@string/sign"
        android:textColor="#FDFDFD"
        android:textColorHighlight="#0D4D70"
        android:textColorLink="#358CCF"
        android:textSize="20sp"
        app:iconTint="#DCBBBB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logInBtn"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/black"
        android:fallbackLineSpacing="false"
        android:fontFamily="@font/days_one"
        android:hapticFeedbackEnabled="false"
        android:text="@string/login"
        android:textColor="#FDFDFD"
        android:textColorHighlight="#0D4D70"
        android:textColorLink="#358CCF"
        android:textSize="20sp"
        app:iconTint="#DCBBBB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />

</androidx.constraintlayout.widget.ConstraintLayout>