<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:passwordToggleEnabled="true"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="264dp"
        android:layout_height="69dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/sign"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="458dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.053">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:text="@string/star"
                android:textColor="#F30808"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paytone_one"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:text="@string/star"
                android:textColor="#F30808"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paytone_one"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextstyle"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:text="@string/star"
                android:textColor="#F30808"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paytone_one"
                android:text="@string/firstName"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paytone_one"
                android:text="@string/lastName"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paytone_one"
                android:text="@string/profession"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/etProfession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/black"
        android:fallbackLineSpacing="false"
        android:fontFamily="@font/days_one"
        android:hapticFeedbackEnabled="false"
        android:text="@string/nextBtn"
        android:textColor="#FDFDFD"
        android:textColorHighlight="#0D4D70"
        android:textColorLink="#358CCF"
        android:textSize="20sp"
        app:iconTint="#DCBBBB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

</androidx.constraintlayout.widget.ConstraintLayout>