<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textRide"
        android:layout_width="389dp"
        android:layout_height="123dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center|center_vertical"
        android:text="@string/newRide1"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="390dp"
        android:layout_height="345dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRide"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paytone_one"
                android:text="@string/from"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/etFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paytone_one"
                android:text="@string/to"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/etTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paytone_one"
                android:text="@string/date"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:gravity="start|top"
            android:hint="dd/mm/yyyy"
            android:minHeight="48dp"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paytone_one"
                android:text="@string/departureTime"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/etDepartureTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rideBtn"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/black"
        android:fallbackLineSpacing="false"
        android:fontFamily="@font/days_one"
        android:hapticFeedbackEnabled="false"
        android:text="@string/addNewRide"
        android:textColor="#FDFDFD"
        android:textColorHighlight="#0D4D70"
        android:textColorLink="#358CCF"
        android:textSize="20sp"
        app:iconTint="#DCBBBB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>