<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="704dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:fontFamily="@font/aclonica"
            android:text=""
            android:textColor="#0C0C0C"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/hi"
            android:textColor="#0C0C0C"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:fontFamily="@font/paytone_one"
            android:text="@string/choise"
            android:textColor="#0C0C0C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="134dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/driver" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/openRideBtn"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/black"
                android:fallbackLineSpacing="false"
                android:fontFamily="@font/days_one"
                android:hapticFeedbackEnabled="false"
                android:text="@string/newRide"
                android:textColor="#FDFDFD"
                android:textColorHighlight="#0D4D70"
                android:textColorLink="#358CCF"
                android:textSize="20sp"
                app:iconTint="#DCBBBB"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.925" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="134dp"
                android:layout_height="137dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/passenger" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/searchRideBtn"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/black"
                android:fallbackLineSpacing="false"
                android:fontFamily="@font/days_one"
                android:hapticFeedbackEnabled="false"
                android:text="@string/searchRide"
                android:textColor="#FDFDFD"
                android:textColorHighlight="#0D4D70"
                android:textColorLink="#358CCF"
                android:textSize="20sp"
                app:iconTint="#DCBBBB"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.925" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>