<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="392dp"
        android:layout_height="158dp"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:text="@string/Iam"
        android:textColor="#000000"
        android:textSize="120sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="182dp"
        android:layout_height="54dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/black"
        android:fallbackLineSpacing="false"
        android:fontFamily="@font/days_one"
        android:hapticFeedbackEnabled="false"
        android:text="@string/driver"
        android:textColor="#FDFDFD"
        android:textColorHighlight="#0D4D70"
        android:textColorLink="#358CCF"
        android:textSize="20sp"
        app:iconTint="#DCBBBB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="182dp"
        android:layout_height="54dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/black"
        android:fallbackLineSpacing="false"
        android:fontFamily="@font/days_one"
        android:hapticFeedbackEnabled="false"
        android:text="@string/passenger"
        android:textColor="#FDFDFD"
        android:textColorHighlight="#0D4D70"
        android:textColorLink="#358CCF"
        android:textSize="20sp"
        app:iconTint="#DCBBBB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="181dp"
        android:layout_height="246dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/driver" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="154dp"
        android:layout_height="236dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488"
        app:srcCompat="@drawable/passenger" />

</androidx.constraintlayout.widget.ConstraintLayout>